@@ -47,6 +47,7 @@ Changelog
  * Fix: StreamField block controls are no longer hidden by the StreamField menu when prepending a new block (Vincent Audebert)
  * Fix: Removed invalid use of `__` alias that prevented strings getting picked up for translation (Juha Yrjölä)
  * Fix: Routable pages without a main view no longer raise a `TypeError` (Bojan Mihelac)
+ * Fix: Fixed UnicodeEncodeError in wagtailforms when downloading a CSV for a form containing non-ASCII field labels on Python 2 (Mikalai Radchuk)
 
 
 1.4.4 (xx.xx.2016)
